--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -4,27 +4,20 @@ on:
   push:
     branches:
       - '*'
+  pull_request:
 
 jobs:
-  build:
+  checking_lib:
     runs-on: ubuntu-latest
 
+    env:
+      SKETCHES_REPORTS_PATH: sketches-reports
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Arduino CLI
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | BINDIR=/usr/local/bin sh
-          arduino-cli core update-index
-          arduino-cli core install esp32:esp32
-
-      - name: Install FlyskyIBUS as library
-        run: |
-          mkdir -p $HOME/Arduino/libraries
-          ln -s $PWD $HOME/Arduino/libraries/FlyskyIBUS
-
-      - name: Compile read_Channels.ino example
-        run: |
-          arduino-cli compile --fqbn esp32:esp32:esp32 examples/read_Channels/read_Channels.ino
-          
+      - uses: actions/checkout@v4
+      - uses: arduino/compile-sketches@v1
+        with:
+          fqbn: esp32:esp32:esp32
+          sketch-paths: examples/read_Channels/read_Channels.ino
+          enable-deltas-report: true
+          sketches-report-path: ${{ env.SKETCHES_REPORTS_PATH }}
