--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=0.4.0
 author=derdoktor667
 maintainer=derdoktor667
 sentence=ESP32 Library for Flysky IBUS Reception and Decoding – Arduino IDE Compatible
-paragraph=ESP32 Library for Flysky IBUS Reception and Decoding – Arduino IDE Compatible
+paragraph=
 category=Signal Input/Output
 url=https://github.com/derdoktor667/FlyskyIBUS
 architectures=esp32
