--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=FlyskyIBUS
-version=0.8.0
+version=0.8.1
 author=derdoktor667
 maintainer=derdoktor667
-sentence=ESP32 Library for Flysky IBUS Reception and Decoding – Arduino IDE Compatible
-paragraph=
+sentence=Seamless ESP32 Library for Flysky iBUS RC Signal Reception with Fire-and-Forget Ease
+paragraph=Unlock effortless integration of Flysky iBUS remote control into your ESP32 projects. This library simplifies signal reception and decoding, offering a robust 'fire-and-forget' API. Just call `getChannel()` to automatically process incoming data and retrieve up-to-date channel values, ensuring a clean and responsive main loop. Ideal for drones, robots, and other remote-controlled applications.
 category=Signal Input/Output
 url=https://github.com/derdoktor667/FlyskyIBUS
 architectures=esp32
